補上註解+小修正

--- a/app/class-environment.html
+++ b/app/class-environment.html
@@ -9,6 +9,7 @@ current: index
 
 <div class="container mb-9">
     <div class="row">
+        <!-- 空間介紹 -->
         <div class="col-12 col-sm-8">
             <div class="row">
                 <div class="col" data-aos="fade-right">
@@ -72,6 +73,7 @@ current: index
                 </div>
             </div>
         </div>
+        <!-- 使用規範 -->
         <div class="col-12 col-sm-4" data-aos="fade-left">
             <div class="card border-0 bg-beige text-dark-brick-red rounded-lg p-3 p-lg-6">
                 <div class="card-body">
@@ -88,6 +90,7 @@ current: index
     </div>
 </div>
 
+<!-- 課程推薦 -->
 <div class="bg-beige">
     <div class="container pt-7 pb-6">
         <h3 class="text-dark-brick-red text-center mb-6">課程推薦</h3>
