--- a/app/contact.html
+++ b/app/contact.html
@@ -10,10 +10,12 @@ current: index
 <div class="container" style="margin-bottom: 110px;">
     <div class="row d-flex flex-column flex-lg-row">
         <div class="col-12 col-lg-7">
+            <!-- 地圖 -->
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3614.5977642652488!2d121.51404261460945!3d25.047721083965957!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xece39c57ea7e4e12!2z5o236YGL5Y-w5YyX6LuK56uZ56uZ!5e0!3m2!1szh-TW!2stw!4v1630419560081!5m2!1szh-TW!2stw"
                 width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                 class="mb-4 rounded-lg map-height" data-aos="fade-right"></iframe>
+            <!-- 教室位置 -->
             <div class="text-dark-brick-red row">
                 <div class="col-12 col-sm-6">
                     <h4 class="mb-2" data-aos="fade-up">DOYOGA 教室位置</h4>
@@ -26,6 +28,7 @@ current: index
                 </div>
             </div>
         </div>
+        <!-- 意見回饋 -->
         <div class="col-12 col-lg-5">
             <div class="bg-beige rounded-lg p-6 text-dark-brick-red" data-aos="fade-left">
                 <h5 class="mb-4">意見回饋&問題詢問</h5>
