--- a/app/reserve-class.html
+++ b/app/reserve-class.html
@@ -7,6 +7,7 @@ current: index
 
 <h2 class="reserve-title mt-9 mb-4 text-dark-brick-red text-center">立即預約</h2>
 
+<!-- 流程標籤 -->
 <div class="container mb-6">
     <div class="row justify-content-center">
         <div class="col-4 col-sm-3 col-lg-2">
@@ -23,7 +24,8 @@ current: index
 
 <div class="course-select">
     <div class="container">
-        <div class="d-block d-sm-none d-lg-block">
+        <!-- 直式課程選單 -->
+        <div class="d-block d-md-none d-lg-block">
             <ul class="list-unstyled row">
                 <li class="col-12 col-sm-4 mb-3 mb-sm-0" data-aos="fade-up">
                     <div class="card rounded-lg course-card">
@@ -78,7 +80,8 @@ current: index
                 </li>
             </ul>
         </div>
-        <div class="d-none d-sm-block d-lg-none">
+        <!-- 橫式課程選單 -->
+        <div class="d-none d-md-block d-lg-none">
             <ul class="list-unstyled row">
                 <li class="col-12">
                     <div class="card mb-4 rounded-lg overflow-hidden">
@@ -154,6 +157,7 @@ current: index
     </div>
 </div>
 
+<!-- 預約須知 -->
 <div class="container text-dark-brick-red" style="margin-bottom: 104px;" data-aos="fade-up">
     <div class="row justify-content-center">
         <div class="col-12 col-sm-8 col-lg-5">
