--- a/app/reserve-information.html
+++ b/app/reserve-information.html
@@ -7,6 +7,7 @@ current: index
 
 <h2 class="reserve-title mt-9 mb-4 text-dark-brick-red text-center">立即預約</h2>
 
+<!-- 流程標籤 -->
 <div class="container mb-6">
     <div class="row justify-content-center">
         <div class="col-4 col-sm-3 col-lg-2">
@@ -21,15 +22,18 @@ current: index
     </div>
 </div>
 
+<!-- 選擇課程 -->
 <div class="text-center mb-6">
     <h6 class="text-gray me-3">您選擇的是
         <span class="h5 text-brick-red">首次體驗課程-基礎</span>
     </h6>
 </div>
 
+<!-- 表單內容 -->
 <form class="container">
     <div class="row d-flex justify-content-center">
         <div class="col-12 col-sm-6 col-lg-4 text-gray">
+            <!-- 第一題 -->
             <div class="form-group mb-6">
                 <h6 class="mb-3">1. 是否接觸過瑜珈?</h6>
                 <div class="form-check form-check-inline">
@@ -44,6 +48,7 @@ current: index
                 </div>
             </div>
 
+            <!-- 第二題 -->
             <div class="form-group mb-6">
                 <h6 class="mb-3">2. 想改善的生活問題?</h6>
                 <div class="form-check form-check-inline">
@@ -72,6 +77,7 @@ current: index
                 </div>
             </div>
 
+            <!-- 第三題 -->
             <div class="form-group mb-6">
                 <h6 class="mb-3">3. 每週累積運動量約為多少？</h6>
                 <div class="form-check form-check-inline">
@@ -97,6 +103,7 @@ current: index
                 </div>
             </div>
 
+            <!-- 第四題 -->
             <div class="form-group mb-6">
                 <h6 class="mb-1">4. 上課預約報到日</h6>
                 <h6 class="mb-2">若還沒有確定的日期，可以等待專員與您聯絡時再做詳細的諮詢哦！</h6>
@@ -105,6 +112,7 @@ current: index
                 </div>
             </div>
 
+            <!-- 第五題 -->
             <div class="form-group mb-6">
                 <h6 class="mb-3">5. 填寫基本資料，完成預約後會寄送通知至電子信箱</h6>
                 <div class="row mb-3">
@@ -137,7 +145,8 @@ current: index
                         placeholder="0912-345-678">
                 </div>
 
-                <a href="reserve-success.html" class="btn btn-dark-brick-red text-white d-block py-2 send-btn">送出</a>
+                <a href="reserve-success.html" class="btn btn-dark-brick-red text-white d-block py-2"
+                    style="margin-bottom: 116px;">送出</a>
             </div>
         </div>
     </div>
