--- a/app/reserve-success.html
+++ b/app/reserve-success.html
@@ -7,6 +7,7 @@ current: index
 
 <h2 class="reserve-title mt-9 mb-4 text-dark-brick-red text-center">立即預約</h2>
 
+<!-- 流程標籤 -->
 <div class="container mb-6">
     <div class="row justify-content-center">
         <div class="col-4 col-sm-3 col-lg-2">
@@ -21,9 +22,11 @@ current: index
     </div>
 </div>
 
+<!-- 預約成功提示 -->
 <h1 class="text-dark-brick-red text-center mb-4" data-aos="zoom-in"><i class="far fa-check-circle"></i></h1>
 <h5 class="text-dark-brick-red text-center mb-6">已完成預約，以下是您的預約資訊：</h5>
 
+<!-- 預約資訊 -->
 <div class="container">
     <div class="row d-flex justify-content-center">
         <div class="col-12 col-sm-8 col-lg-6">
@@ -60,12 +63,14 @@ current: index
     </div>
 </div>
 
+<!-- 上課注意事項 -->
 <div class="container text-dark-brick-red">
     <div class="row d-flex justify-content-center">
         <div class="col-12 col-sm-6 col-lg-4">
             <h3 class="text-center mt-6 mb-3">上課注意事項</h3>
             <h6 class="mb-6">第一次上課請提前 10-15 分鐘至櫃檯報到，請攜帶毛巾、水 .穿著運動服、乾淨室內運動鞋。 如欲更改體驗時間請提前通知我們喔！</h6>
-            <a href="index.html" class="btn btn-dark-brick-red text-white d-block py-2 index-btn">返回首頁</a>
+            <a href="index.html" class="btn btn-dark-brick-red text-white d-block py-2"
+                style="margin-bottom: 104px;">返回首頁</a>
         </div>
     </div>
 </div>
