--- a/app/schedule.html
+++ b/app/schedule.html
@@ -7,6 +7,7 @@ current: index
 
 <h3 class="text-dark-brick-red mt-9 mb-6 text-center">本月課表</h3>
 
+<!-- 課表 -->
 <div class="container-lg mb-6">
     <div class="row">
         <div class="col-12 col-lg-10 mx-auto" data-aos="fade-up">
@@ -115,9 +116,10 @@ current: index
     </div>
 </div>
 
+<!-- 上課須知 -->
 <h3 class="text-gray text-center mb-6" data-aos="fade-up">上課須知</h3>
 
-<div class="container class-notice">
+<div class="container class-notice" style="margin-bottom: 104px;">
     <div class="row mb-4 d-flex justify-content-center justify-content-lg-start" data-aos="fade-right">
         <div class="offset-lg-2 col-10 col-lg-7 d-flex align-items-center">
             <h2 class="me-4 text-gray">1.</h2>
